# gto-today

./: .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.github/workflows/: solver-wasm.yml
apps/web/: .gitignore  .npmrc  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vercel.json  vitest.config.ts
docs/: deploy.md  oauth-setup.md  postflop-plan.md
docs/ci-setup/: solver-wasm.yml.template
prisma/: schema.prisma
scripts/: generate-ai-assets-v2.mjs  generate-ai-assets.mjs  generate-card-back-red.mjs  generate-card-back.mjs  generate-chip-set-v2.mjs  generate-chip-set-v3.mjs  generate-chip-set-v4.mjs  generate-chip-set.mjs  generate-chip-wordmark.mjs  generate-logo-v2.mjs  generate-onboarding-v2.mjs  generate-suits-final.mjs  generate-suits-flat.mjs  generate-suits-grid.mjs  generate-suits-v4.mjs  generate-suits.mjs  generate-wordmark-v2.mjs  generate-wordmark.mjs  optimize-user-images.mjs  process-user-suits.mjs  remove-chip-bg.mjs  verify-env.sh
solver-run/: .gitignore  all-tiers.sh  chain.sh  chain3.sh  cleanup-after-chain.sh  cleanup-oversized.sh  post-chain3.sh  process-watchdog.sh  retry-segfaults.sh  run-all.sh  run-mtt.sh  run-phase2.sh  run-phase3.sh  run-phase4.sh  run-phase5.sh  run-phase6.sh  start-watchdog.cmd  watchdog.sh
solver-wasm/: Cargo.toml  LICENSE  README.md
solver-wasm/src/: lib.rs
(+658 files in other folders)
