[package]
name = "gto-today-solver-wasm"
version = "0.5.0"
edition = "2021"
license = "AGPL-3.0"
description = "WASM bindings for postflop-solver — serves the gto.today live-solve API"
repository = "https://github.com/jayj1990/gto-today-solver-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Disable default features to skip `bincode` (save/load — we don't
# need it for live solve) and `rayon` (WASM has no threads by default).
# Leaves just the core CFR solver, which is all we need.
#
# `bincode` default-on would otherwise pull in bincode 2.0.0 stable,
# but postflop-solver was written against 2.0.0-rc.3 and the two have
# a breaking `Decode<Context>` signature change that fails to compile.
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", rev = "9d1509fe5077d019825f833eed04b16d342dfda1", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# console_error_panic_hook forwards Rust panics to the browser/Node
# console so failures surface instead of dying silently.
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
# LTO + single codegen unit → smaller WASM + ~15% faster solves.
lto = true
codegen-units = 1
opt-level = 3
# Unwind lets us catch panics with std::panic::catch_unwind and turn
# them into JS errors instead of WASM "unreachable" traps that the
# caller can't introspect.
panic = "unwind"
